--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         flatDir {
             dirs 'libs'
-            dirs project(':app').file('libs')
+            dirs project(':nasiliveapp').file('libs')
         }
 
     }
