--- a/beauty/build.gradle
+++ b/beauty/build.gradle
@@ -22,8 +22,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "com.android.support:appcompat-v7:$rootProject.ext.supportSdkVersion"
-    compile "com.android.support:recyclerview-v7:$rootProject.ext.supportSdkVersion"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportSdkVersion"
+    implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportSdkVersion"
 }
 
