--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,73 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+
+# Project-wide Gradle settings.
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+#org.gradle.jvmargs=-Xmx1536m
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+# AndroidX package structure to make it clearer which packages are bundled with the
+# Android operating system, and which are packaged with your app's APK
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
+#android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX
+#android.enableJetifier=true
+
+# dokit????
+# ????
+DOKIT_PLUGIN_SWITCH=true
+# DOKIT???????booster?? ???????????booster ???????false
+DOKIT_THIRD_LIB_SWITCH=true
+# ????
+DOKIT_LOG_SWITCH=true
+# ???Webview????? ??????h5 js?????mock
+DOKIT_WEBVIEW_CLASS_NAME=com/didichuxing/doraemonkit/widget/webview/MyWebView
+# dokit ?????
+DOKIT_METHOD_SWITCH=true
+# dokit ???????
+DOKIT_METHOD_STACK_LEVEL=4
+# 0:???? ??????? ???????  ???application onCreate ?attachBaseContext
+# 1:???? ???????????? ??????????
+DOKIT_METHOD_STRATEGY=0
+# Automatically convert third-party libraries to use AndroidX
+#org.gradle.daemon=true
+#org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#org.gradle.parallel=true
+#org.gradle.configureondemand=true
+# Gradle ????
+COMPILE_SDK_VERSION=28
+BUILD_TOOLS_VERSION=28.0.3
+MIN_SDK_VERSION=19
+TARGET_SDK_VERSION=26
+# ??????
+VERSION_NAME=1.0
+VERSION_CODE=1
+# SDK??
+IMSDK_VERSION=5.5.897
+# ??????
+UTIL_CODE_VERSION=1.25.9
+GSON_VERSION=2.3.1
+CIRCLEIMAGEVIEW_VERSION=3.1.0
+CONSTRAINT_LAYOUT_VERSION=1.1.3
+DESIGN_VERSION=27.1.0
+APPCOMPAT_V7_VERSION=26.0.1
+RECYCLERVIEW_V7_VERSION=26.0.1
+DANMAKU_FLAME_MASTER_VERSION=0.5.3
+GLIDE_VERSION=4.12.0
+OKHTTP_VERSION=3.11.0
+RETROFIT_VERSION=2.2.0
+CONVERTER_GSON_VERSION=2.2.0
+LOGGING_INTERCEPTOR_VERSION=3.8.1
+MULTIDEX_VERSION=1.0.0
+CRASHREPORT_UPGRADE=1.5.1
+NATIVECRASHREPORT=3.8.0
+MobSDK.spEdition=FP
