--- a/picture_library/build.gradle
+++ b/picture_library/build.gradle
@@ -24,13 +24,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':ucrop')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':ucrop')
     //noinspection GradleCompatible
-    compile "com.android.support:appcompat-v7:28+"
+    implementation "com.android.support:appcompat-v7:28+"
     //noinspection GradleCompatible
-    compile "com.android.support:recyclerview-v7:28+"
-    compile "com.github.bumptech.glide:glide:4.8.0"
-    compile "io.reactivex.rxjava2:rxjava:2.1.3"
-    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "com.android.support:recyclerview-v7:28+"
+    implementation "com.github.bumptech.glide:glide:4.8.0"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.3"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
