--- a/ucrop/build.gradle
+++ b/ucrop/build.gradle
@@ -31,8 +31,8 @@ android {
 
 dependencies {
     //noinspection GradleCompatible
-    compile "com.android.support:appcompat-v7:28+"
+    implementation "com.android.support:appcompat-v7:28+"
     //noinspection GradleCompatible
-    compile "com.android.support:recyclerview-v7:28+"
+    implementation "com.android.support:recyclerview-v7:28+"
     implementation "com.github.bumptech.glide:glide:4.8.0"
 }
