--- a/ugckit/build.gradle
+++ b/ugckit/build.gradle
@@ -50,28 +50,28 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile fileTree(include: ['*.jar'], dir: 'src/main/jniLibs')
-    compile 'com.android.support:design:25.4.0'
-    compile 'com.android.support:recyclerview-v7:25.4.0'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.github.bumptech.glide:glide:4.8.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'src/main/jniLibs')
+    implementation 'com.android.support:design:25.4.0'
+    implementation 'com.android.support:recyclerview-v7:25.4.0'
+    implementation 'com.google.code.gson:gson:2.3.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 
 //    implementation(name: 'LiteAVSDK_UGC', ext: 'aar')
-    compile 'com.android.support:multidex:1.0.0'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.github.castorflex.verticalviewpager:library:19.0.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.android.support:support-annotations:24.2.0'
-    compile 'com.tencent.bugly:crashreport:3.1.0'
-    compile 'com.tencent.bugly:nativecrashreport:3.7.0'
-    compile 'com.squareup.okhttp3:okhttp:3.11.0'
-    compile 'com.squareup.okio:okio:1.13.0'
+    implementation 'com.android.support:multidex:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.castorflex.verticalviewpager:library:19.0.1'
+    api 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.android.support:support-annotations:24.2.0'
+    api 'com.tencent.bugly:crashreport:3.1.0'
+    api 'com.tencent.bugly:nativecrashreport:3.7.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okio:okio:1.13.0'
     compileOnly 'com.lzy.net:okgo:3.0.4'
-    compile('com.tencent.qcloud:cosxml:5.4.20') {
+    api ('com.tencent.qcloud:cosxml:5.4.20') {
         exclude group: 'com.tencent.qcloud', module: 'mtaUtils' //关闭 mta 上报功能}
     }
-    compile 'com.alibaba:fastjson:1.1.71.android'
-    compile project(':beauty')
+    implementation 'com.alibaba:fastjson:1.1.71.android'
+    implementation project(':beauty')
     api project(path: ':LiteAVSDK_Professional')
 }
