--- a/beauty/build.gradle
+++ b/beauty/build.gradle
@@ -23,7 +23,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportSdkVersion"
-    implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportSdkVersion"
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    //implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportSdkVersion"
 }
 
