--- a/nasiliveapp/build.gradle
+++ b/nasiliveapp/build.gradle
@@ -44,7 +44,7 @@ MobSDK {
 
 android {
 
-    compileSdkVersion 29
+    compileSdkVersion 31
     buildToolsVersion "28.0.3"
     compileOptions {
         targetCompatibility = "8"
@@ -53,7 +53,7 @@ android {
     defaultConfig {
         applicationId "com.nasinet.live"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 24
         versionName "3.1.1"
 
@@ -92,14 +92,17 @@ dependencies {
     // 导入腾讯云短视频SDK jar
     implementation fileTree(dir: 'src/main/jniLibs', includes: ['*.jar'])
  //   implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.android.support:appcompat-v7:28+'
+    /*implementation 'com.android.support:appcompat-v7:28+'
     implementation 'com.android.support:design:28+'
     implementation 'com.android.support:support-v4:28+'
     implementation 'com.android.support:recyclerview-v7:28+'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'*/
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation project(path: ':picture_library')
     implementation project(path: ':SVGAPlayer')
-    implementation 'com.android.support:coordinatorlayout:28.+'
+    //implementation 'com.android.support:coordinatorlayout:28.+'
+    implementation 'com.google.android.material:material:1.5.0'
 
     testImplementation 'junit:junit:4.12'
     //  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -161,7 +164,9 @@ dependencies {
 
     implementation 'com.lxj:xpopup:1.8.10'
     implementation 'pub.devrel:easypermissions:1.0.1'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
     implementation 'com.github.orhanobut:hawk:1.21'
@@ -173,7 +178,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     implementation 'com.yanzhenjie:permission:2.0.0-rc4'
-    implementation 'com.android.support:design:23.4.0'
+    //implementation 'com.android.support:design:23.4.0'
 
     implementation project(':beauty')
     implementation project(':ugckit')
