--- a/picture_library/build.gradle
+++ b/picture_library/build.gradle
@@ -27,9 +27,9 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':ucrop')
     //noinspection GradleCompatible
-    implementation "com.android.support:appcompat-v7:28+"
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     //noinspection GradleCompatible
-    implementation "com.android.support:recyclerview-v7:28+"
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation "com.github.bumptech.glide:glide:4.8.0"
     implementation "io.reactivex.rxjava2:rxjava:2.1.3"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
