--- a/tiui/build.gradle
+++ b/tiui/build.gradle
@@ -21,9 +21,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    api 'com.android.support:appcompat-v7:28.0.0'
-    api 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    api 'androidx.appcompat:appcompat:1.4.0'
+    //api 'com.android.support:recyclerview-v7:28.0.0'
     api 'com.android.support.constraint:constraint-layout:1.1.3'
     api 'com.google.code.gson:gson:2.8.5'
     api 'com.github.bumptech.glide:glide:4.8.0'
