--- a/tuikit2/build.gradle
+++ b/tuikit2/build.gradle
@@ -44,10 +44,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:support-v4:28+'
-    implementation 'com.android.support:appcompat-v7:28+'
+    //implementation 'com.android.support:support-v4:28+'
+    //implementation 'com.android.support:appcompat-v7:28+'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.android.support:support-annotations:28+'
-    implementation 'com.android.support:recyclerview-v7:28+'
+    //implementation 'com.android.support:recyclerview-v7:28+'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation 'it.sephiroth.android.library.imagezoom:library:1.0.4'
