--- a/ucrop/build.gradle
+++ b/ucrop/build.gradle
@@ -31,8 +31,10 @@ android {
 
 dependencies {
     //noinspection GradleCompatible
-    implementation "com.android.support:appcompat-v7:28+"
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    //implementation "com.android.support:appcompat-v7:28+"
     //noinspection GradleCompatible
-    implementation "com.android.support:recyclerview-v7:28+"
+    //implementation "com.android.support:recyclerview-v7:28+"
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation "com.github.bumptech.glide:glide:4.8.0"
 }
