--- a/ugckit/build.gradle
+++ b/ugckit/build.gradle
@@ -52,8 +52,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation fileTree(include: ['*.jar'], dir: 'src/main/jniLibs')
-    implementation 'com.android.support:design:25.4.0'
-    implementation 'com.android.support:recyclerview-v7:25.4.0'
+    //implementation 'com.android.support:design:25.4.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    //implementation 'com.android.support:recyclerview-v7:25.4.0'
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
