--- a/nasiliveapp/build.gradle
+++ b/nasiliveapp/build.gradle
@@ -58,7 +58,7 @@ android {
         versionName "3.1.1"
 
         ndk {
-            abiFilters "armeabi-v7a",  "armeabi"
+            abiFilters "armeabi-v7a"//,  "armeabi"
         }
 
     }
